--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <style>
   
-      p {color:coral}
+      p {color:brown}
       h2 {color:brown}
       
     </style>
@@ -35,7 +35,7 @@
   <main>
     <section id="home">
       <div class="container">
-        <h2>Welcome to My Personal Website</h2>
+        <h2>Welcome to My Duck Website</h2>
         <p>hehehehehehehehehe</p>
       </div>
       <div class="imagebody">
@@ -45,7 +45,7 @@
     </section>
     <section id="about">
       <div class="container">
-        <h2>About Me</h2>
+        <h2>About Meme Duck</h2>
         <p>Nothing here</p>
       </div>
       <div class="imagebody">
@@ -54,10 +54,13 @@
       </div>
     </div>
     </section>
-    <section id="portfolio">
+    <section id="Portfolio">
       <div class="container">
-        <h2>Dịch vụ</h2>
-        <p>:3</p>
+        <h2>portfolio</h2>
+        <p>    ︻╦̵̵͇̿̿̿̿╤──•••••
+          <h2>▬▬ι═══════ﺤ</h2>
+          <h2>: ⌐╦╦═─</h2>
+        </p>
       </div>
       <div class="imagebody">
         <img src="/images/th 3.jpg" alt="zeine" >
@@ -66,8 +69,8 @@
     </section>
     <section id="contact">
       <div class="container">
-        <h2>Contact Me</h2>
-        <p>113</p>
+        <h2>Contact</h2>
+        <p>Zeine</p>
       </div>
       <div class="imagebody">
         <img src="/images/th 5.jpg" alt="zeine" >
